# vision-graft-mcp

./: .gitignore  LICENSE  README.ko.md  README.md  install.command  install_mac.command  install_win.bat  install_win.ps1  pyproject.toml  start.command  start_mac.command  start_win.bat  start_win.ps1  uninstall_mac.command  uninstall_win.bat  uninstall_win.ps1
docs/: README.en.md  idea.md  plan.md  windows-port-plan.md
docs/archive/: README.en.md  README.ko.md
src/vgmcp/: __init__.py  __main__.py  cli.py
src/vgmcp/adapter/: __init__.py  stdio_adapter.py
src/vgmcp/capture/: __init__.py  macos.py  windows.py
src/vgmcp/core/: __init__.py  autostart.py  capture_service.py  clipboard.py  config.py  credentials.py  environment.py  errors.py  i18n.py  icons.py  imaging.py  interfaces.py  mainthread.py  models.py  platform.py
src/vgmcp/server/: __init__.py  app.py  host.py  vision_service.py
src/vgmcp/tray/: __init__.py  macos.py  windows.py
src/vgmcp/vision/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py  report.py
tests/: test_autostart.py  test_capture_macos.py  test_capture_windows.py  test_cli.py  test_clipboard_recent.py  test_config_registry.py  test_consent.py  test_environment.py  test_i18n.py  test_icons.py  test_ollama_backend.py  test_self_analyze.py  test_stabilization.py  test_tray_macos.py  test_tray_macos_static.py  test_tray_windows.py  test_vision_pipeline.py
